--- a/src/main/resources/templates/reset-password-form.html
+++ b/src/main/resources/templates/reset-password-form.html
@@ -1,15 +1,68 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Reset Password</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            width: 300px;
+        }
+        label {
+            font-weight: bold;
+            margin-bottom: 8px;
+            display: block;
+        }
+        input[type="password"] {
+            width: calc(100% - 20px);
+            padding: 8px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            transition: border-color 0.3s ease;
+        }
+        input[type="password"]:focus {
+            border-color: #007bff;
+            outline: none;
+        }
+        button[type="submit"] {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+            transition: background-color 0.3s ease;
+        }
+        button[type="submit"]:hover {
+            background-color: #1D70B8;
+        }
+    </style>
 </head>
 <body>
-<form action="/api/v1/forgot-password/reset-password" method="post">
-    <input type="hidden" name="token" th:value="${token}">
-    <label for="password">New Password:</label>
-    <input type="password" id="password" name="password" required>
-    <button type="submit">Reset Password</button>
-</form>
+<div class="container">
+    <h2 style="text-align: center;">Reset Password</h2>
+    <form action="/api/v1/forgot-password/reset-password" method="post">
+        <input type="hidden" name="token" th:value="${token}">
+        <label for="password">New Password:</label>
+        <input type="password" id="password" name="password" required>
+        <button type="submit">Reset Password</button>
+    </form>
+</div>
 </body>
 </html>
+
