Provided server side new password setting

--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -63,7 +63,7 @@
                 <p style="Margin:0 0 20px 0;font-size:19px;line-height:25px;color:#0b0c0c"> Please click on the below link to reset your password: </p>
                 <blockquote style="Margin:0 0 20px 0;border-left:10px solid #b1b4b6;padding:15px 0 0.1px 15px;font-size:19px;line-height:25px">
                     <p style="Margin:0 0 20px 0;font-size:19px;line-height:25px;color:#0b0c0c">
-                        <a style="color:#1D70B8; text-decoration: underline;" th:href="@{'http://localhost:8080/api/v1/forgot-password/reset-password?token=' + ${token}}">Reset Now</a>
+                        <a style="color:#1D70B8; text-decoration: underline;" th:href="@{'http://localhost:4200/new-password?token=' + ${token}}">Reset Now</a>
                     </p></blockquote>Link will expire in 24 hours.
                 <p>See you soon</p>
             </td>
